--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="your-image-url.jpg" alt="Devesh Patel">
+            <img src="mypic.jpg">
             <nav>
                 <a href="#about">about me</a>
                 <a href="#projects">projects</a>
@@ -97,7 +97,7 @@
         </div>
         <div class="content">
             <h1>Devesh Patel</h1>
-            <p>Software Engineerr</p>
+            <p>Software Engineer</p>
         </div>
     </div>
 </body>
