--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="mypic.jpg">
+            <img src="mypic.jpeg">
             <nav>
                 <a href="#about">about me</a>
                 <a href="#projects">projects</a>
