--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         .social-icons {
             display: flex;
             justify-content: center;
+            margin-top: 20px;
         }
         .social-icons a {
             color: #fff;
@@ -73,11 +74,13 @@
             font-size: 14px;
         }
     </style>
+    <!-- Font Awesome CDN for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="mypic.jpeg">
+            <img src="image.jpeg" alt="Devesh Patel">
             <nav>
                 <a href="#about">about me</a>
                 <a href="#projects">projects</a>
@@ -85,11 +88,8 @@
                 <a href="#hire">hire me</a>
             </nav>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-gamepad"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-discord"></i></a>
+                <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="email">
                 <a href="mailto:"> </a>
