--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
             <div class="social-icons">
                 <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://discord.com/users/your-discord-id" target="_blank"><i class="fab fa-discord"></i></a>
             </div>
             <div class="email">
-                <a href="mailto:"> </a>
+                <a href="mailto:devesh.patel360@gmail.com">devesh.patel360@gmail.com</a>
             </div>
         </div>
         <div class="content">
