--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #1f1f1f, #3a3a3a);
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #fff;
             display: flex;
             justify-content: center;
@@ -80,7 +81,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="image.jpeg" alt="Devesh Patel">
+            <img src="profilepic.jpeg" alt="Devesh Patel">
             <nav>
                 <a href="#about">about me</a>
                 <a href="#projects">projects</a>
