--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
             margin-top: 20px;
             font-size: 14px;
         }
+        .email a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .email a:hover {
+            text-decoration: underline;
+        }
     </style>
     <!-- Font Awesome CDN for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -102,9 +110,7 @@
                 <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://discord.com/users/deveshtradeseth" target="_blank"><i class="fab fa-discord"></i></a>
-            </div>
-            <div class="email">
-                <a href="mailto:devesh.patel360@gmail.com">devesh.patel360@gmail.com</a>
+                <a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="content">
@@ -115,3 +121,4 @@
     </div>
 </body>
 </html>
+
