--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
         .sidebar nav a {
             color: #fff;
             text-decoration: none;
-            font-size: 18px;
-            margin: 10px 0;
+            font-size: 24px; /* Increased font size */
+            margin: 20px 0; /* Increased vertical margin */
             display: block;
+            font-weight: bold; /* Added font weight for emphasis */
+            letter-spacing: 1px; /* Added letter spacing for a nicer look */
+            transition: all 0.3s ease; /* Added transition for smoother hover effect */
         }
         .sidebar nav a:hover {
             text-decoration: underline;
@@ -101,16 +104,16 @@
     <div class="container">
         <div class="sidebar">
             <nav>
-                <a href="#about">about me</a>
-                <a href="#projects">projects</a>
-                <a href="#travel">travel</a>
-                <a href="#hire">hire me</a>
+                <a href="#about">About Me</a>
+                <a href="#projects">Projects</a>
+                <a href="#travel">Travel</a>
+                <a href="#hire">Hire me</a>
             </nav>
             <div class="social-icons">
                 <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://discord.com/users/deveshtradeseth" target="_blank"><i class="fab fa-discord"></i></a>
-                <a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
+		<a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="content">
@@ -121,4 +124,3 @@
     </div>
 </body>
 </html>
-
