adding about.html

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devesh Patel</title>
+    <title>About Me</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,6 +21,7 @@
             background: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
             overflow: hidden;
+            padding: 20px;
         }
         .content {
             padding: 20px;
@@ -42,36 +43,6 @@
         }
         .content p {
             margin: 5px 0;
-        }
-        .sidebar {
-            background: #2a2a2a;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .sidebar img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        .sidebar nav {
-            margin-top: 20px;
-        }
-        .sidebar nav a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 24px; /* Increased font size */
-            margin: 20px 0; /* Increased vertical margin */
-            display: block;
-            font-weight: bold; /* Added font weight for emphasis */
-            letter-spacing: 1px; /* Added letter spacing for a nicer look */
-            transition: all 0.3s ease; /* Added transition for smoother hover effect */
-        }
-        .sidebar nav a:hover {
-            text-decoration: underline;
         }
         .social-icons {
             display: flex;
@@ -96,31 +67,29 @@
         .email a:hover {
             text-decoration: underline;
         }
+
     </style>
     <!-- Font Awesome CDN for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">
-            <nav>
-                <a href="about.html">About Me</a>
-                <a href="#projects">Projects</a>
-                <a href="#travel">Travel</a>
-                <a href="#hire">Hire me</a>
-            </nav>
-            <div class="social-icons">
-                <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://discord.com/users/deveshtradeseth" target="_blank"><i class="fab fa-discord"></i></a>
-		<a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
-            </div>
-        </div>
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
             <p>-- Software Engineer --</p>
+            <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can check out my portfolio here.</p>
+            <p>I am currently doing a Bachelor's degree in Computer Science from Swansea University and 6 years of experience in software development.</p>
+            <p>In my free time, I enjoy coding, gaming, and training.</p>
+            <p>Feel free to connect with me on:</p>
+            <div class="social-icons">
+                <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://discord.com/users/deveshtradeseth" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
     </div>
 </body>
 </html>
+
