--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
             <p>-- Software Engineer --</p>
-            <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can check out my portfolio here.</p>
+            <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can <a href="hireme.html"> check out my portfolio here</a>.</p>
             <p>I am currently doing a Bachelor's degree in Computer Science from Swansea University and 6 years of experience in software development.</p>
             <p>In my free time, I enjoy coding, gaming, and training.</p>
             <p>Feel free to connect with me on:</p>
