--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,6 +24,21 @@
             border-radius: 10px;
             overflow: hidden;
             padding: 20px;
+            position: relative;
+        }
+        .home-link {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: #fff;
+            text-decoration: none;
+            font-size: 24px;
+            font-weight: bold;
+            z-index: 1;
+            transform: rotate(180deg); /* Rotating the arrow */
+        }
+        .home-link:hover {
+            opacity: 0.7; /* Reduced opacity on hover */
         }
         .content {
             padding: 20px;
@@ -75,6 +91,9 @@
 </head>
 <body>
     <div class="container">
+        <!-- Back arrow link -->
+        <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
+
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
