--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 <body>
     <div class="container">
         <!-- Back arrow link -->
-        <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
+        <a href="index.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
 
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
