--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <div class="sidebar">
             <nav>
                 <a href="about.html">About Me</a>
-                <a href="#projects">Projects</a>
-                <a href="#travel">Travel</a>
-                <a href="#hire">Hire me</a>
+                <a href="projects.html">Projects</a>
+                <a href="travel.html">Travel</a>
+                <a href="hireme.html">Hire me</a>
             </nav>
             <div class="social-icons">
                 <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
