--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Snake</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="snake.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +36,6 @@
             font-size: 24px;
             font-weight: bold;
             z-index: 1;
-            transform: rotate(180deg); /* Rotating the arrow */
         }
         .home-link:hover {
             opacity: 0.7; /* Reduced opacity on hover */
@@ -57,7 +57,7 @@
 <body>
     <div class="container">
         <!-- Back arrow link -->
-        <a href="index.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
+        <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
 
         <div class="content">
             <h1>Snake</h1>
@@ -68,3 +68,5 @@
     <script src="snake.js"></script>
 </body>
 </html>
+
+
