--- a/about.html
+++ b/about.html
@@ -85,6 +85,24 @@
             text-decoration: underline;
         }
 
+        /* Add these styles for all states of the link */
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: #fff;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: #fff;
+        }
+
     </style>
     <!-- Font Awesome CDN for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -98,8 +116,8 @@
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
             <p>-- Software Engineer --</p>
-            <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can <a href="hireme.html"> check out my portfolio here</a>.</p>
-            <p>I am currently doing a Bachelor's degree in Computer Science from Swansea University and 6 years of experience in software development.</p>
+            <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can <a href="projects.html"> check out my projects here</a>.</p>
+            <p>I am currently doing a Bachelor's degree in Computer Science from Swansea University and have 6 years of experience in software development.</p>
             <p>In my free time, I enjoy coding, gaming, and training.</p>
             <div class="social-icons">
                 <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
