--- a/snakegame.html
+++ b/snakegame.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Projects</title>
+    <title>Snake</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="snake.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
@@ -46,21 +47,10 @@
             align-items: center;
             text-align: center;
         }
-        .project-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-        .project-list li {
-            margin-bottom: 10px;
-        }
-        .project-list li a {
-            color: #fff;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        .project-list li a:hover {
-            text-decoration: underline;
+        #board {
+            width: 400px;
+            height: 400px;
+            background-color: black;
         }
     </style>
 </head>
@@ -70,12 +60,13 @@
         <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
 
         <div class="content">
-            <h1>My Projects</h1>
-            <ul class="project-list">
-                <li><a href="snakegame.html">Snake Game</a></li>
-                <!-- Add more project links here -->
-            </ul>
+            <h1>Snake</h1>
+            <canvas id="board"></canvas>
         </div>
     </div>
+
+    <script src="snake.js"></script>
 </body>
 </html>
+
+
