--- a/snakegame.html
+++ b/snakegame.html
@@ -57,7 +57,7 @@
 <body>
     <div class="container">
         <!-- Back arrow link -->
-        <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
+        <a href="projects.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
 
         <div class="content">
             <h1>Snake</h1>
