--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
-            <p>-- Software Engineer --</p>
+            <p>Software Engineer</p>
         </div>
     </div>
 </body>
