--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Devesh Patel</h1>
-            <p>-- Software Engineer --</p>
+            <p>Software Engineer</p>
             <p>Hi there! I'm Devesh Patel, a passionate 20-year-old software engineer based in London. I love building innovative solutions and exploring new technologies. I'm also a software Engineer, you can <a href="projects.html"> check out my projects here</a>.</p>
             <p>I am currently doing a Bachelor's degree in Computer Science from Swansea University and have 6 years of experience in software development.</p>
             <p>In my free time, I enjoy coding, gaming, and training.</p>
