--- a/snakegame.html
+++ b/snakegame.html
@@ -52,6 +52,19 @@
             height: 400px;
             background-color: black;
         }
+        #restartBtn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #restartBtn:hover {
+            background-color: #218838;
+        }
     </style>
 </head>
 <body>
@@ -62,6 +75,7 @@
         <div class="content">
             <h1>Snake</h1>
             <canvas id="board"></canvas>
+            <button id="restartBtn">Restart</button>
         </div>
     </div>
 
