--- a/hireme.html
+++ b/hireme.html
@@ -1,2 +1,146 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Devesh | Hire Me</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            display: flex;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+            overflow: hidden;
+            padding: 20px;
+            position: relative;
+        }
+        .home-link {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: #fff;
+            text-decoration: none;
+            font-size: 24px;
+            font-weight: bold;
+            z-index: 1;
+            transform: rotate(180deg);
+        }
+        .home-link:hover {
+            opacity: 0.7;
+        }
+        .content {
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        .content img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 20px;
+        }
+        .content h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        .content p {
+            margin: 10px 0; /* Increased margin for better spacing */
+            font-size: 20px; /* Increased font size for better readability */
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .social-icons {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .social-icons a {
+            color: #fff;
+            font-size: 24px;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+        .email {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+        .email a {
+            color: #fff;
+            text-decoration: none;
+        }
+        .email a:hover {
+            text-decoration: underline;
+        }
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+        a:visited {
+            color: #fff;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        a:active {
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <a href="index.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
+        <div class="content">
+            <img src="profilepic.jpeg" alt="Devesh Patel">
+            <h1>Hire Me</h1>
+            <p>You can contact me directly via Discord, or email (<a href="mailto:devesh.patel360@gmail.com">devesh.patel360@gmail.com</a>).</p>
+            
+            <div class="section">
+                <h2>Software Engineering</h2>
+                <p>I have 6+ years of development experience across a vast range of tools, including, but not limited to:</p>
+                <p>Python, Java, JavaScript, Git, MySQL, HTML & CSS, Swift and Firebase</p>
+            </div>
+
+            <div class="section">
+                <h2>Qualifications</h2>
+                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity (Coursera
+Project Network), Google Ads (Google), Sky VWEX (Sky)</p>
+            </div>
+
+            <div class="section">
+                <h2>Work Experience</h2>
+                <p>Bic, Exponential-e, Sky </p>
+            </div>
+
+            <div class="section">
+                <h2>References</h2>
+                <p>References available on request</p>
+            </div>
+
+            <div class="social-icons">
+                <a href="https://github.com/D3v3shPat3l" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/deveshpatel04/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://discord.com/users/deveshtradeseth" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="mailto:devesh.patel360@gmail.com"><i class="fas fa-envelope"></i></a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 
 
