--- a/hireme.html
+++ b/hireme.html
@@ -32,7 +32,7 @@
             left: 20px;
             color: #fff;
             text-decoration: none;
-            font-size: 24px;
+            font-size: 18px;
             font-weight: bold;
             z-index: 1;
             transform: rotate(180deg);
@@ -48,37 +48,37 @@
             text-align: center;
         }
         .content img {
-            width: 150px;
-            height: 150px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         .content h1 {
             margin: 0;
-            font-size: 36px;
+            font-size: 28px;
         }
         .content p {
-            margin: 10px 0; /* Increased margin for better spacing */
-            font-size: 20px; /* Increased font size for better readability */
+            margin: 5px 0;
+            font-size: 14px;
         }
         .section {
-            margin: 20px 0;
+            margin: 10px 0;
         }
         .social-icons {
             display: flex;
             justify-content: center;
-            margin-top: 20px;
+            margin-top: 15px;
         }
         .social-icons a {
             color: #fff;
-            font-size: 24px;
-            margin: 0 10px;
+            font-size: 20px;
+            margin: 0 8px;
             text-decoration: none;
         }
         .email {
-            margin-top: 20px;
-            font-size: 14px;
+            margin-top: 15px;
+            font-size: 12px;
         }
         .email a {
             color: #fff;
@@ -108,18 +108,17 @@
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Hire Me</h1>
-            <p>You can contact me directly via Discord, or email (<a href="mailto:devesh.patel360@gmail.com">devesh.patel360@gmail.com</a>).</p>
+            <p>You can contact me directly via Discord or email (<a href="mailto:devesh.patel360@gmail.com">devesh.patel360@gmail.com</a>).</p>
             
             <div class="section">
                 <h2>Software Engineering</h2>
-                <p>I have 6+ years of development experience across a vast range of tools, including, but not limited to:</p>
-                <p>Python, Java, JavaScript, Git, MySQL, HTML & CSS, Swift and Firebase</p>
+                <p>I have 6+ years of development experience across a vast range of tools including, but not limited to:</p>
+                <p>Python, Java, JavaScript, Git, MySQL, HTML & CSS, Swift, and Firebase</p>
             </div>
 
             <div class="section">
                 <h2>Qualifications</h2>
-                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity (Coursera
-Project Network), Google Ads (Google), Sky VWEX (Sky)</p>
+                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity (Coursera Project Network), Google Ads (Google), Sky VWEX (Sky)</p>
             </div>
 
             <div class="section">
@@ -142,5 +141,6 @@ Project Network), Google Ads (Google), Sky VWEX (Sky)</p>
     </div>
 </body>
 </html>
+
 
 
