--- a/hireme.html
+++ b/hireme.html
@@ -118,7 +118,8 @@
 
             <div class="section">
                 <h2>Qualifications</h2>
-                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity (Coursera Project Network), Google Ads (Google), Sky VWEX (Sky), MedTech: AI and Medical Robots (UOL)</p>
+                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity   (Coursera Project Network), </p> 
+            <p>Google Ads (Google), Sky VWEX (Sky), MedTech: AI and Medical Robots (UOL)</p>
             </div>
 
             <div class="section">
