--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <!-- Back arrow link -->
-        <a href="index.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
+        <a href="main.html" class="home-link"><i class="fas fa-arrow-left"></i></a>
 
         <div class="content">
             <h1>My Projects</h1>
