--- a/hireme.html
+++ b/hireme.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="index.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
+        <a href="main.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
             <h1>Hire Me</h1>
