--- a/projects.html
+++ b/projects.html
@@ -72,10 +72,12 @@
         <div class="content">
             <h1>My Projects</h1>
             <ul class="project-list">
-                <li><a href="snakegame.html">Snake Game</a></li>
+                <li><a href="snakegame.html">Snake</a></li>
+                <li><a href="https://github.com/D3v3shPat3l/tictactoepython/blob/main/tictactoe.py" target="_blank">Tic Tac Toe</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
     </div>
 </body>
 </html>
+
