--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
             <h1>My Projects</h1>
             <ul class="project-list">
                 <li><a href="snakegame.html">Snake</a></li>
-                <li><a href="https://github.com/D3v3shPat3l/tictactoepython/blob/main/tictactoe.py" target="_blank">Tic Tac Toe</a></li>
+                <li><a href="https://github.com/D3v3shPat3l/tictactoepython/" target="_blank">Tic Tac Toe</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
