--- a/projects.html
+++ b/projects.html
@@ -74,6 +74,7 @@
             <ul class="project-list">
                 <li><a href="snakegame.html">Snake</a></li>
                 <li><a href="https://github.com/D3v3shPat3l/tictactoepython/" target="_blank">Tic Tac Toe</a></li>
+		<li><a href="2048game.html">2048</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
