removing the auth

--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 <body>
     <div class="container">
         <!-- Back arrow link -->
-        <a href="main.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
+        <a href="index.html" class="home-link"><i class="fas fa-arrow-right"></i></a>
 
         <div class="content">
             <img src="profilepic.jpeg" alt="Devesh Patel">
