update on hireme

--- a/hireme.html
+++ b/hireme.html
@@ -112,19 +112,19 @@
             
             <div class="section">
                 <h2>Software Engineering</h2>
-                <p>I have 6+ years of development experience across a vast range of tools including, but not limited to:</p>
-                <p>Python, Java, JavaScript, Git, MySQL, HTML & CSS, Swift, and Firebase</p>
+                <p>I have 6+ years of development experience across a vast range of tools including:</p>
+                <p>Python, Java, JavaScript, Git, MySQL, HTML & CSS, Kotlin, Firebase and a few more.</p>
             </div>
 
             <div class="section">
-                <h2>Qualifications</h2>
-                <p>C++ Basics (Codeacademy), Programming with GUIs (Raspberry Pi Foundation), Python Tricks and Hacks for Productivity   (Coursera Project Network), </p> 
-            <p>Google Ads (Google), Sky VWEX (Sky), MedTech: AI and Medical Robots (UOL)</p>
+                <h2>Certificates</h2> 
+            <p>Citi - Technology Software Development Job Simulation, J.P. Morgan - Software Engineering Job Simulation, </p>
+		<p>UOL - MedTech: AI and Medical Robots</p>
             </div>
 
             <div class="section">
                 <h2>Work Experience</h2>
-                <p>Bic, Exponential-e, Sky </p>
+                <p>Bic and Exponential-e </p>
             </div>
 
             <div class="section">
