--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <title>About | Devesh Patel</title>
+  <title>Skills | Devesh Patel</title>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -55,9 +55,11 @@
       text-decoration: underline;
     }
 
-    p {
+    ul {
       font-size: 1.1rem;
-      line-height: 1.6;
+      line-height: 1.8;
+      list-style-type: disc;
+      padding-left: 1.5rem;
     }
 
     @keyframes fadeIn {
@@ -70,14 +72,19 @@
   <div class="bubble">
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="education.html">Education</a>
       <a href="experience.html">Experience</a>
-      <a href="skills.html">Skills</a>
       <a href="contact.html">Contact</a>
     </nav>
 
-    <h1>About Me</h1>
-    <p>Hi! I'm Devesh Patel, a passionate 20-year-old Computer Science student based in London. I love building innovative solutions and exploring new technologies. I’m currently pursuing a Bachelor’s degree in Computer Science at Swansea University, and I’m deeply interested in the fields of Crypto, AI, and Fintech. My portfolio showcases a variety of projects that reflect my technical ability and creativity.</p>
+    <h1>Skills</h1>
+    <ul>
+      <li>Languages: Python, Java, C++</li>
+      <li>Frontend: React.js, HTML, CSS</li>
+      <li>Object-Oriented Design Principles</li>
+      <li>Version Control: Git</li>
+    </ul>
   </div>
 </body>
 </html>
