--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <title>About | Devesh Patel</title>
+  <title>Education | Devesh Patel</title>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -48,16 +48,20 @@
       color: var(--primary-color);
       margin-right: 1rem;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: bold;	
     }
 
     nav a:hover {
       text-decoration: underline;
     }
 
-    p {
+    p, ul {
       font-size: 1.1rem;
       line-height: 1.6;
+    }
+
+    strong {
+      color: #ffffff;
     }
 
     @keyframes fadeIn {
@@ -70,15 +74,22 @@
   <div class="bubble">
     <nav>
       <a href="index.html">Home</a>
-      <a href="education.html">Education</a>
+      <a href="about.html">About</a>
       <a href="experience.html">Experience</a>
       <a href="skills.html">Skills</a>
       <a href="contact.html">Contact</a>
     </nav>
 
-    <h1>About Me</h1>
-    <p>Hi! I'm Devesh Patel, a passionate 20-year-old Computer Science student based in London. I love building innovative solutions and exploring new technologies. I’m currently pursuing a Bachelor’s degree in Computer Science at Swansea University, and I’m deeply interested in the fields of Crypto, AI, and Fintech. My portfolio showcases a variety of projects that reflect my technical ability and creativity.</p>
+    <h1>Education</h1>
+    <p><strong>BSc Computer Science (Predicted 2:1)</strong><br>
+    Swansea University, 2022 – 2025</p>
+
+    <p><strong>Modules:</strong> Web Application Development (94%), Mobile App Development (74%), Embedded Systems Design (65%), Video Game Programming, Cryptography and IT-Security, Advanced Object-Oriented Programming,</p>
+
+    <p><strong>Final Year Project:</strong> Deep Learning-Based Chatbot</p>
+
+    <p><strong>A Levels:</strong> Chemistry, Computer Science, Mathematics<br>
+    Park High School, Stanmore (2020 – 2022)</p>
   </div>
 </body>
 </html>
-
