--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <title>About | Devesh Patel</title>
+  <title>Experience | Devesh Patel</title>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -34,10 +34,15 @@
       box-shadow: 0 0 20px rgba(0, 255, 195, 0.2);
     }
 
-    h1 {
+    h1, h2 {
       color: var(--primary-color);
       font-size: 2.5rem;
       margin-bottom: 1rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-top: 3rem;
     }
 
     nav {
@@ -55,9 +60,18 @@
       text-decoration: underline;
     }
 
-    p {
+    p, ul {
       font-size: 1.1rem;
       line-height: 1.6;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+      list-style: disc;
+    }
+
+    strong {
+      color: #ffffff;
     }
 
     @keyframes fadeIn {
@@ -70,15 +84,32 @@
   <div class="bubble">
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="education.html">Education</a>
-      <a href="experience.html">Experience</a>
       <a href="skills.html">Skills</a>
       <a href="contact.html">Contact</a>
     </nav>
 
-    <h1>About Me</h1>
-    <p>Hi! I'm Devesh Patel, a passionate 20-year-old Computer Science student based in London. I love building innovative solutions and exploring new technologies. I’m currently pursuing a Bachelor’s degree in Computer Science at Swansea University, and I’m deeply interested in the fields of Crypto, AI, and Fintech. My portfolio showcases a variety of projects that reflect my technical ability and creativity.</p>
+    <h1>Experience</h1>
+    <p><strong>Exponential-e – Assistant Network and Server Engineer</strong><br>
+    Aldgate | July 2019 – August 2019</p>
+    <p>Worked across server and networking divisions, shadowing professionals and gaining insight into real-world tech operations.</p>
+
+    <h2>Certificates</h2>
+    <p><strong>Citi Bank Software Engineering Virtual Experience</strong> – October 2024</p>
+    <ul>
+      <li>Improved the loan management system and risk reporting.</li>
+      <li>Created a UML state diagram for loan processing.</li>
+      <li>Researched ML models for credit risk evaluation.</li>
+      <li>Developed a Java tool for real-time stock market risk visualization.</li>
+    </ul>
+
+    <p><strong>J.P. Morgan Software Engineering Virtual Experience</strong> – August 2024</p>
+    <ul>
+      <li>Set up a local dev environment with required dependencies.</li>
+      <li>Fixed broken files in a repo to correct web app output.</li>
+      <li>Used JPMorgan's Perspective to visualize a live data feed for traders.</li>
+    </ul>
   </div>
 </body>
 </html>
-
