Adding project page

--- a/contact.html
+++ b/contact.html
@@ -81,14 +81,15 @@
       <a href="education.html">Education</a>
       <a href="experience.html">Experience</a>
       <a href="skills.html">Skills</a>
+      <a href="projects.html">Projects</a>
     </nav>
 
     <h1>Contact</h1>
-    <a class="contact-link" href="mailto:devesh.patel360@gmail.com">Email Me</a>
-    <a class="contact-link" href="https://linkedin.com/in/deveshpatel04" target="_blank">LinkedIn</a>
-    <a class="contact-link" href="https://github.com/D3v3shPat3l" target="_blank">GitHub</a>
-    <a class="contact-link" href="https://devesh.uk" target="_blank">Personal Website</a>
-    <a class="contact-link" href="Devesh_Patel_CV.pdf" download>Download CV</a>
+    <a class="contact-link" href="mailto:devesh.patel360@gmail.com">📌 Email</a>
+    <a class="contact-link" href="https://linkedin.com/in/deveshpatel04" target="_blank">📌 LinkedIn</a>
+    <a class="contact-link" href="https://github.com/D3v3shPat3l" target="_blank">📌 GitHub</a>
+    <a class="contact-link" href="https://devesh.uk" target="_blank">📌 Personal Website</a>
+    <a class="contact-link" href="Devesh_Patel_CV.pdf" download>📌 Download CV</a>
   </div>
 </body>
 </html>
