--- a/skills.html
+++ b/skills.html
@@ -75,6 +75,7 @@
       <a href="about.html">About</a>
       <a href="education.html">Education</a>
       <a href="experience.html">Experience</a>
+      <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
 
