--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>About | Devesh Patel</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -23,6 +25,16 @@
       align-items: center;
       min-height: 100vh;
       animation: fadeIn 2s ease;
+      overflow: hidden;
+    }
+
+    #background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
     .bubble {
@@ -67,6 +79,8 @@
   </style>
 </head>
 <body>
+  <div id="background"></div>
+
   <div class="bubble">
     <nav>
       <a href="index.html">Home</a>
@@ -80,6 +94,21 @@
     <h1>About Me</h1>
     <p>Hi! I'm Devesh Patel, a passionate 20-year-old Computer Science student based in London. I love building innovative solutions and exploring new technologies. I’m currently pursuing a Bachelor’s degree in Computer Science at Swansea University, and I’m deeply interested in the fields of Crypto, AI, and Fintech. My portfolio showcases a variety of projects that reflect my technical ability and creativity.</p>
   </div>
+
+  <script>
+    VANTA.WAVES({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x1a1b1b
+    });
+  </script>
 </body>
 </html>
+
 
