--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Devesh Patel</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -13,27 +15,39 @@
       --font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      background-color: var(--bg-color);
-      color: var(--text-color);
       font-family: var(--font);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      flex-direction: column;
+      overflow: hidden;
       text-align: center;
-      animation: fadeIn 2s ease;
+    }
+
+    #background {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: -1;
     }
 
     .bubble {
-      background-color: #1a1a1a;
+      background-color: rgba(26, 26, 26, 0.85);
       border-radius: 20px;
       padding: 3rem;
       max-width: 700px;
       width: 90%;
       box-shadow: 0 0 20px rgba(0, 255, 195, 0.2);
+      color: var(--text-color);
+      animation: fadeIn 2s ease;
     }
 
     h1 {
@@ -70,6 +84,7 @@
   </style>
 </head>
 <body>
+  <div id="background"></div>
   <div class="bubble">
     <h1>Devesh Patel</h1>
     <p>Backend Developer | Software Engineer</p>
@@ -82,5 +97,18 @@
       <a href="contact.html">Contact</a>
     </nav>
   </div>
+  <script>
+    VANTA.WAVES({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x1a1b1b
+    })
+  </script>
 </body>
 </html>
