--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects | Devesh Patel</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   <style>
     :root {
       --primary-color: #00ffc3;
@@ -24,6 +26,16 @@
       min-height: 100vh;
       padding: 2rem;
       animation: fadeIn 2s ease;
+      overflow: hidden;
+    }
+
+    #background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
     .bubble {
@@ -94,6 +106,8 @@
   </style>
 </head>
 <body>
+  <div id="background"></div>
+
   <div class="bubble">
     <nav>
       <a href="index.html">Home</a>
@@ -167,7 +181,18 @@
       const desc = element.nextElementSibling;
       desc.style.display = desc.style.display === 'block' ? 'none' : 'block';
     }
+
+    VANTA.WAVES({
+      el: "#background",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x1a1b1b
+    })
   </script>
 </body>
 </html>
-
