--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
       align-items: center;
       min-height: 100vh;
       animation: fadeIn 2s ease;
-      overflow: hidden;
+      overflow: auto;
     }
 
     #background {
