--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
+      overflow: auto;
       text-align: center;
     }
 
