--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       min-height: 100vh;
       padding: 2rem;
       animation: fadeIn 2s ease;
-      overflow: hidden;
+      overflow: auto;
     }
 
     #background {
