--- a/experience.html
+++ b/experience.html
@@ -38,7 +38,7 @@
     }
 
     .bubble {
-      background-color: #1a1a1a;
+      background-color: rgba(26, 26, 26, 0.85);
       border-radius: 20px;
       padding: 2rem;
       max-width: 700px;
